--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body,
   padding: 0;
 }
 
+#root {
+  background-color: #010718;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
